welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
	var T = new Array[Color](6) 
	getCouleurSol();
	while(i<-0 to 5) { t[i]==getCouleurSol() ;avance();  t[i]==t[i+1]; }
	
}
